Socket io integration

--- a/tester.html
+++ b/tester.html
@@ -4,6 +4,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script>
       const socket = io('http://localhost:3030');
+      socket.on("world-new", function(data) {
+        console.log("new world", data);
+      });
+
+      socket.on("field-new", function(data) {
+        console.log("new field", data);
+      });
+
+      socket.on("field-update", function(data) {
+        console.log("updated field", data);
+      });
+
+      setInterval(function () {
+        socket.emit("update");
+      }, 5000);
+
+      //socket.emit("update");
     </script>
   </body>
 </html>
