--- a/tester.html
+++ b/tester.html
@@ -2,14 +2,14 @@
 <head>
   <style type="text/css">
     .game {
-      height: 300px;
-      width: 300px;
+      height: 500px;
+      width: 500px;
       background-color: purple;
     }
 
     .world {
-      height: 300px;
-      width: 300px;
+      height: 500px;
+      width: 500px;
       background-color: black;
       position: relative;
     }
@@ -93,7 +93,7 @@
 
 <div class="game">
   <div class="world">
-    <game-field v-for="field in fields" :field="field"></game-field>
+    <game-field v-for="field in fields" :field="field" :key="field.id"></game-field>
   </div>
 </div>
 </body>
