--- a/renderers/canvas-tester.html
+++ b/renderers/canvas-tester.html
@@ -35,6 +35,7 @@
 
     const fields = {};
     const entities = {};
+    const eyes = {};
 
     const socket = io('http://localhost:3030');
     socket.on("world-new", function(data) {
@@ -83,6 +84,20 @@
         if (entity.isDead) {
           circle.fill("black");
         }
+
+        // let eye = null;
+        // let e = entity;
+        // if (eyes[entity.id]) {
+        //   eye = eyes[entity[id]];
+        // } else {
+        //   eye = new Konva.Line({
+        //     points: [e.position[0] * 10, e.position[1] * 10, e.position[0] * 10 + e.direction[0] * 5, e.position[1] * 10 + e.direction[1] * 5],
+        //     stroke: 'purple',
+        //     strokeWidth: 2,
+        //   });
+        //   entitiesLayer.add(eye);
+        // }
+
       });
       entitiesLayer.batchDraw();
     });
